# myplat

./: .dockerignore  .env.example  .env.instructions.md  .env.production.template  .gitignore  CLAUDE.md  COMPLETE_VERSION_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  HONEST_ASSESSMENT.md  PROJECT_STRUCTURE.md  QUICK_START.md  RAILWAY_DATABASE_FIX.md  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_ENV_CORRECT.txt  README.md  ROADMAP.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  START_HERE.md  TESTING_STATUS.md  VERCEL_DEPLOY_GUIDE.md  alembic.ini  docker-compose.full.yml  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  start-simple.ps1  start.ps1  start.sh  test_api_basic.py  test_app_structure.py  test_basic_imports.py  test_dependencies.py  test_imports.py  update-env.ps1  vercel.json
.claude/: settings.local.json
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
database/: init.sql
frontend/: next-i18next.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/pages/: _app.tsx  _document.tsx  chat.tsx  dashboard.tsx  index.tsx  login.tsx
frontend/pages/documents/: index.tsx  upload.tsx
frontend/public/locales/en/: common.json
frontend/src/components/: command-palette.tsx  error-boundary.tsx
frontend/src/components/accessibility/: accessibility-menu-simple.tsx  accessibility-menu.tsx
frontend/src/components/dashboard/: activity-feed.tsx  quick-actions.tsx  statistics-cards.tsx  welcome-banner.tsx
frontend/src/components/documents/: recent-documents.tsx
frontend/src/components/layouts/: footer.tsx  header.tsx  main-layout.tsx  mobile-navigation.tsx  (+1 more)
frontend/src/hooks/: use-auth.tsx  use-debounce.ts  use-direction.ts  use-keyboard-shortcuts.ts
frontend/src/lib/: api.ts  icon-mappings.ts  utils.ts
frontend/src/styles/: globals.css
migrations/: env.py
monitoring/: prometheus.yml
scripts/: seed_data.py
src/: main.py  main_minimal.py
src/api/: __init__.py  admin.py  auth.py  chat.py  documents.py  health.py  openapi.py  search.py
src/core/: auth.py  config.py  data_protection.py  database.py  logging.py  observability.py  security.py
src/middleware/: __init__.py  auth.py  dependencies.py  error_handling.py  rate_limit.py  request_id.py  tenant.py
src/models/: __init__.py  answer.py  audit_log.py  badge.py  base.py  chunk.py  citation.py  contribution.py  conversation.py  data_subject_request.py  document.py  embedding.py  experiment.py  expert.py  feedback.py  feedback_comparison.py  interaction.py  message.py  model_training.py  peer_review.py  preference_pair.py  profile.py  rag_event.py  reputation.py  retrieval.py  source.py  tenant.py  user.py  user_consent.py  user_embedding.py  user_preference.py
src/services/: __init__.py  admin_service.py  analytics_service.py  auth_service.py  cache.py  chat_service.py  document_processor.py  embedding.py  embedding_service.py  expert_system.py  feedback_system.py  ingestion.py  llm_router.py  personalization.py  rag_engine.py  rag_service.py  search.py  search_service.py  storage.py  storage_service.py  vector_store.py
tests/: conftest.py  run_tests.py  test_requirements.txt
tests/e2e/: test_complete_user_journey.py
tests/integration/: test_document_workflow.py
tests/unit/: test_auth_service.py  test_rag_engine.py  test_search_service.py
(+7 files in other folders)
